--- a/source/PartyInvites - practice area/PartyInvites/Views/Home/Index.cshtml
+++ b/source/PartyInvites - practice area/PartyInvites/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
     
     @Html.ActionLink("RSVP Now", "RsvpForm")<br/>
-    
-    @Html.ActionLink("Account Creation", "PersonForm")<br />
+    @Html.ActionLink("Account Creation", "PersonForm")<br/>
+    @Html.ActionLink("Character Creation", "CharacterNameRaceForm")<br/>
 </body>
 </html>
