--- a/source/PartyInvites - practice area/PartyInvites/Content/Site.css
+++ b/source/PartyInvites - practice area/PartyInvites/Content/Site.css
@@ -3,3 +3,14 @@
 .input-validation-error { border: 1px solid #f00;background-color: #fee;}
 .validation-summary-errors { font-weight: bold;color: #f00;}
 .validation-summary-valid { display: none;}
+
+
+div {
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+    border-radius: 5px;
+}
+#red {
+    background-color: #ff0000;
+}
