--- a/source/PartyInvites - practice area/PartyInvites/Views/Home/CharacterAttributeForm.cshtml
+++ b/source/PartyInvites - practice area/PartyInvites/Views/Home/CharacterAttributeForm.cshtml
@@ -10,7 +10,6 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Site.css" rel="stylesheet" />
-    <script src="~/Scripts/script.js"></script>
     <script src="~/Content/jquery-1.11.3.min.js"></script>
     <title>CharacterAttributeForm</title>
 </head>
@@ -20,9 +19,8 @@
         <p>Character name: @Model.Name</p>
         <p>Race Type: @Model.Race</p>
 
-        <div id="red">
-
-        </div>
+        <div id="red"></div>
+        <div id="blue"></div>
         @using (@Html.BeginForm())
         {
             <p>Health: @Html.TextBoxFor(x => x.derivedAttributes.Health)</p>
@@ -31,6 +29,6 @@
             <p>Encumbrance: @Html.TextBoxFor(x => x.derivedAttributes.Encumbrance)</p>
         }
 
-        <script src="~/Content/jquery-1.11.3.min.js"></script>
+    <script src="~/Scripts/script.js"></script>
     </body>
 </html>
